# GAIA-The-Sentient-Terrestrial-Intelligent-Operating-System

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml
.gaia/: README.md  collaboration_protocol.md
.github/workflows/: ci.yml  deploy-docs.yml  python-tests.yml
00-CONSTITUTION/: index.html
00-CONSTITUTION-PROFESSIONAL/: index.html
01-ARCHITECTURE/: index.html
01-ARCHITECTURE-PROFESSIONAL/: index.html
02-GAIAN-AGENT-ARCHITECTURE/: index.html
03-GLOBAL-TECH-GRID-INTEGRATION/: index.html
04-EVIDENCE_GRADING/: index.html
05-LIVING-ENVIRONMENT-ENGINE/: index.html
AUDIT_REMEDIATION/: index.html
api/: index.html
architecture/: index.html
bridge/: .gitkeep  __init__.py
bridge/alchemy/: __init__.py  transitions.py
bridge/environment/: __init__.py  astronomy.py  engine.py  state.py  types.py  weather.py
bridge/safety/: __init__.py  crisis_detection.py
core/: .gitkeep  __init__.py  constants.py  crystal_matrix.py  gaian.py  z_calculator.py
core/audit/: __init__.py  utl.py
core/environment/: __init__.py  astronomy.py  engine.py  state.py  types.py  weather.py
core/identity/: __init__.py  initiation_level.py
core/safety/: __init__.py  crisis_detector.py
core/zscore/: __init__.py  calculator.py
dependencies/: index.html
development/quickstart/: index.html
docs/: 00-CONSTITUTION-PROFESSIONAL.md  00-CONSTITUTION.md  01-ARCHITECTURE-PROFESSIONAL.md  01-ARCHITECTURE.md  02-GAIAN-AGENT-ARCHITECTURE.md  03-GLOBAL-TECH-GRID-INTEGRATION.md  04-EVIDENCE_GRADING.md  05-LIVING-ENVIRONMENT-ENGINE.md  AUDIT_REMEDIATION.md  api.md  architecture.md  dependencies.md  index.md  setup.md
docs/decisions/: .gitkeep
docs/development/: quickstart.md
docs/research/: .gitkeep
infrastructure/: .gitkeep  __init__.py
infrastructure/api/: __init__.py  environment_websocket.py  websocket_server.py
infrastructure/atlas/: __init__.py  cryptographic_coding.py  logos_interpreter.py  nanotech_interface.py  universal_installer.py
overlay/: .gitkeep  __init__.py  cli.py
overlay/avatar/: __init__.py  cryptographic_memory.py  emergence.py  memory.py  personality.py
overlay/equilibrium/: __init__.py  capacity_tracker.py  tracker.py
search/: search_index.json
setup/: index.html
tests/: .gitkeep  __init__.py  conftest.py  test_avatar_emergence.py  test_core_systems.py  test_crisis_detector.py  test_lee_integration.py  test_websocket_api.py  test_zscore.py
tests/bridge/: __init__.py  test_lee_integration.py
tests/core/: __init__.py  test_core_system.py
tests/infrastructure/: __init__.py  test_websocket_api.py
tests/overlay/: __init__.py  test_avatar_emergence.py
web/desktop/: electron-main.js  index.html  package.json  preload.js  scene.js
